MonetDB/src/mal/Tests/tst1002.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## the first of a series of BBP test cases
## the temporary bat produced in tst1000 should not exist anymore
#
#bbp.open();
#c:= bbp.take("myfirstbat");
#print(c);
#bbp.close();
#
function Admin.main():int;	#0:(main:int)
	bbp.open();	#1:($1:void)
	c := bbp.take("myfirstbat");	#2:(c:bat[any,any])<-($3:str)
	mal.print(c);	#3:($4:int)<-(c:bat[any,any])
	bbp.close();	#4:($5:void)
end function;	#5:
!ERROR: bbpException:Admin.main[2]:myfirstbat:failed to take from box

>